--- a/Docs/src/manual.texi
+++ b/Docs/src/manual.texi
@@ -697,7 +697,7 @@ Default: alpha_rejection always_pass@*@*
 
 Sets the hardware culling mode for this pass.@*@*
 
-Format: cull_hardware <clockwise|anitclockwise|none>@*@*
+Format: cull_hardware <clockwise|anticlockwise|none>@*@*
 
 A typical way for the hardware rendering engine to cull triangles is based on the 'vertex winding' of triangles. Vertex winding refers to the direction in which the vertices are passed or indexed to in the rendering operation as viewed from the camera, and will wither be clockwise or anticlockwise (that's 'counterclockwise' for you Americans out there ;). If the option 'cull_hardware clockwise' is set, all triangles whose vertices are viewed in clockwise order from the camera will be culled by the hardware. 'anticlockwise' is the reverse (obviously), and 'none' turns off hardware culling so all triagles are rendered (useful for creating 2-sided passes).@*@*
 
