--- a/Docs/src/manual.texi
+++ b/Docs/src/manual.texi
@@ -445,7 +445,7 @@ By setting this attribute, you indicate that you want this material to alter the
 
 Format: lod_distances <distance_1> [<distance_2> ... <distance_n>]@*
 
-Example: lod_distances 300 600 1200@*@*
+Example: lod_distances 300.0 600.5 1200@*@*
 
 The above example would cause the material to use the best Technique at lod_index 0 up to a distance of 300 world units, the best from lod_index 1 from 300 up to 600, lod_index 2 from 600 to 1200, and lod_index 3 from 1200 upwards.@*@*
 
@@ -697,7 +697,7 @@ Default: alpha_rejection always_pass@*@*
 
 Sets the hardware culling mode for this pass.@*@*
 
-Format: cull_hardware <clockwise|anitclockwise|none>@*@*
+Format: cull_hardware <clockwise|anticlockwise|none>@*@*
 
 A typical way for the hardware rendering engine to cull triangles is based on the 'vertex winding' of triangles. Vertex winding refers to the direction in which the vertices are passed or indexed to in the rendering operation as viewed from the camera, and will wither be clockwise or anticlockwise (that's 'counterclockwise' for you Americans out there ;). If the option 'cull_hardware clockwise' is set, all triangles whose vertices are viewed in clockwise order from the camera will be culled by the hardware. 'anticlockwise' is the reverse (obviously), and 'none' turns off hardware culling so all triagles are rendered (useful for creating 2-sided passes).@*@*
 
@@ -988,6 +988,8 @@ The 'type' parameter allows you to specify a the type of texture to create - the
 A 1-dimensional texture; that is, a texture which is only 1 pixel high. These kinds of textures can be useful when you need to encode a function in a texture and use it as a simple lookup, perhaps in a fragment program. It is important that you use this setting when you use a fragment program which uses 1-dimensional texture coordinates, since GL requires you to use a texture type that matches (D3D will let you get away with it, but you ought to plan for cross-compatibility). Your texture widths should still be a power of 2 for best compatibility and performance.
 @item 2d
 The default type which is assumed if you omit it, your texture has a width and a height, both of which should preferably be powers of 2, and if you can, make them square because this will look best on the most hardware. These can be addressed with 2D texture coordinates.
+@item 3d
+A 3 dimensional texture ie volume texture. Your texture has a width, a height, both of which should be powers of 2, and has depth. These can be addressed with 3d texture coordinates ie through a pixel shader.
 @item cubic
 This texture is made up of 6 2D textures which are pasted around the inside of a cube. Can be addressed with 3D texture coordinates and are useful for cubic reflection maps and normal maps.
 @end table
@@ -1181,6 +1183,8 @@ See the IMPORTANT note below about the issues between mulitpass and multitexturi
 	The interpolated specular colour from the vertices.
 @item src_manual
 	The manual colour specified at the end of the command.
+@item dotproduct
+	The dot product of source1 and source2
 @end table
 @end table
 @*
